test/Sema/varargs.c
begin_unit|revision:0.9.5;language:C;cregit-version:0.0.1
begin_comment
comment|// RUN: clang-cc -fsyntax-only -verify %s
end_comment

begin_comment
comment|// RUN: clang-cc -fsyntax-only -verify %s -triple x86_64-apple-darwin9
end_comment

begin_function
name|void
name|f1
parameter_list|(
name|int
name|a
parameter_list|)
block|{
name|__builtin_va_list
name|ap
decl_stmt|;
name|__builtin_va_start
argument_list|(
name|ap
argument_list|,
name|a
argument_list|,
name|a
argument_list|)
expr_stmt|;
comment|// expected-error {{too many arguments to function}}
name|__builtin_va_start
argument_list|(
name|ap
argument_list|,
name|a
argument_list|)
expr_stmt|;
comment|// expected-error {{'va_start' used in function with fixed args}}
block|}
end_function

begin_function
name|void
name|f2
parameter_list|(
name|int
name|a
parameter_list|,
name|int
name|b
parameter_list|,
modifier|...
parameter_list|)
block|{
name|__builtin_va_list
name|ap
decl_stmt|;
name|__builtin_va_start
argument_list|(
name|ap
argument_list|,
literal|10
argument_list|)
expr_stmt|;
comment|// expected-warning {{second parameter of 'va_start' not last named argument}}
name|__builtin_va_start
argument_list|(
name|ap
argument_list|,
name|a
argument_list|)
expr_stmt|;
comment|// expected-warning {{second parameter of 'va_start' not last named argument}}
name|__builtin_va_start
argument_list|(
name|ap
argument_list|,
name|b
argument_list|)
expr_stmt|;
block|}
end_function

begin_function
name|void
name|f3
parameter_list|(
name|float
name|a
parameter_list|,
modifier|...
parameter_list|)
block|{
name|__builtin_va_list
name|ap
decl_stmt|;
name|__builtin_va_start
argument_list|(
name|ap
argument_list|,
name|a
argument_list|)
expr_stmt|;
name|__builtin_va_start
argument_list|(
name|ap
argument_list|,
operator|(
name|a
operator|)
argument_list|)
expr_stmt|;
block|}
end_function

begin_comment
comment|// stdarg: PR3075
end_comment

begin_function
name|void
name|f4
parameter_list|(
specifier|const
name|char
modifier|*
name|msg
parameter_list|,
modifier|...
parameter_list|)
block|{
name|__builtin_va_list
name|ap
decl_stmt|;
name|__builtin_stdarg_start
argument_list|(
operator|(
name|ap
operator|)
argument_list|,
operator|(
name|msg
operator|)
argument_list|)
expr_stmt|;
name|__builtin_va_end
argument_list|(
name|ap
argument_list|)
expr_stmt|;
block|}
end_function

begin_function
name|void
name|f5
parameter_list|()
block|{
name|__builtin_va_list
name|ap
decl_stmt|;
name|__builtin_va_start
argument_list|(
name|ap
argument_list|,
name|ap
argument_list|)
expr_stmt|;
comment|// expected-error {{'va_start' used in function with fixed args}}
block|}
end_function

begin_function
name|void
name|f6
parameter_list|(
name|int
name|a
parameter_list|,
modifier|...
parameter_list|)
block|{
name|__builtin_va_list
name|ap
decl_stmt|;
name|__builtin_va_start
argument_list|(
name|ap
argument_list|)
expr_stmt|;
comment|// expected-error {{too few arguments to function}}
block|}
end_function

begin_comment
comment|// PR3350
end_comment

begin_function
name|void
name|foo
parameter_list|(
name|__builtin_va_list
name|authors
parameter_list|,
modifier|...
parameter_list|)
block|{
name|__builtin_va_start
argument_list|(
name|authors
argument_list|,
name|authors
argument_list|)
expr_stmt|;
operator|(
name|void
operator|)
name|__builtin_va_arg
argument_list|(
name|authors
argument_list|,
name|int
argument_list|)
expr_stmt|;
name|__builtin_va_end
argument_list|(
name|authors
argument_list|)
expr_stmt|;
block|}
end_function

begin_function
name|void
name|f7
parameter_list|(
name|int
name|a
parameter_list|,
modifier|...
parameter_list|)
block|{
name|__builtin_va_list
name|ap
decl_stmt|;
name|__builtin_va_start
argument_list|(
name|ap
argument_list|,
name|a
argument_list|)
expr_stmt|;
comment|// FIXME: This error message is sub-par.
name|__builtin_va_arg
argument_list|(
name|ap
argument_list|,
name|int
argument_list|)
operator|=
literal|1
expr_stmt|;
comment|// expected-error {{expression is not assignable}}
name|int
modifier|*
name|x
init|=
operator|&
name|__builtin_va_arg
argument_list|(
name|ap
argument_list|,
name|int
argument_list|)
decl_stmt|;
comment|// expected-error {{address expression must be an lvalue or a function designator}}
name|__builtin_va_end
argument_list|(
name|ap
argument_list|)
expr_stmt|;
block|}
end_function

end_unit

